--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -20,7 +20,7 @@
 	text-align: center;
 	font-size: 1.6rem;
 	text-transform: uppercase;
-	&--blue{
+	&--blue {
 		color: c.$blue;
 	}
 }
@@ -40,8 +40,11 @@
 }
 .bgc-color {
 	width: 100%;
-	padding: 2em 0;
-	&--white {
-		background-color: c.$white;
+	padding: 2em;
+	&--faded-white {
+		background-color: c.$fadedWhite;
 	}
+}
+.block-scrolling {
+	overflow: hidden;
 }
