--- a/src/sass/_results.scss
+++ b/src/sass/_results.scss
@@ -1,10 +1,8 @@
 @use 'colors' as c;
 
-.main{
+.main {
 	position: relative;
-	
 }
-
 
 .results {
 	margin-top: 30px;
@@ -24,7 +22,6 @@
 		justify-content: flex-start;
 		width: 100%;
 		min-height: 50vh;
-	
 	}
 }
 .result {
@@ -50,6 +47,7 @@
 	overflow: hidden;
 
 	&__img {
+		width: 80px;
 		height: 60px;
 		object-fit: cover;
 		border-radius: 12px 0 0 12px;
@@ -57,7 +55,7 @@
 	&__box-left {
 		display: flex;
 	}
-	
+
 	&__box-text {
 		display: flex;
 		justify-content: center;
@@ -66,6 +64,7 @@
 	}
 	&__title {
 		font-size: 1.4rem;
+		width: 80%;
 	}
 	&__description {
 		font-size: 1.2rem;
@@ -73,6 +72,11 @@
 	}
 	&__btn {
 		margin-right: 15px;
+	}
+	&__icon-info {
+		font-size: 1.3rem;
+		margin-right: 20px;
+		color: c.$blue;
 	}
 }
 
@@ -84,7 +88,6 @@
 			justify-content: center;
 			flex-wrap: wrap;
 			gap: 30px;
-			
 		}
 	}
 	.result {
@@ -113,10 +116,14 @@
 			margin-top: 10px;
 			align-items: center;
 			justify-content: center;
+			text-align: center;
 		}
-		&__btn {
-			margin-right: 0;
-			margin-bottom: 5px;
+		
+		&__icon-info {
+			font-size: 1.7rem;
+			margin-right: 0px;
+			margin-bottom: 15px;
+			color: c.$blue;
 		}
 	}
 }
@@ -132,11 +139,11 @@
 @media (min-width: 1400px) {
 	.result {
 		width: 250px;
-		height: 225px;
+		height: 235px;
 
 		&__img {
 			width: 250px;
-			height: 125px;
+			height: 100px;
 		}
 	}
 }
