--- a/src/sass/_results.scss
+++ b/src/sass/_results.scss
@@ -11,8 +11,8 @@
 	justify-content: center;
 	flex-direction: column;
 	padding: 2em;
-	&__title {
-		align-self: flex-start;
+	&__error{
+		color: red;
 		margin-bottom: 10px;
 	}
 	&__box {
