--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -7,7 +7,7 @@
 		position: relative;
 		width: 100%;
 		height: 100%;
-		background-image: url('../img/hero-big3.jpg');
+		background-image: url('../img/hero-small.jpg');
 		background-size: cover;
 		background-position: 50% 50%;
 		box-shadow: 0 0 5px black;
@@ -116,6 +116,7 @@
 @media (min-width: 992px) {
 	.header {
 		.hero {
+			background-image: url('../img/hero-big.jpg');
 			.searching-input {
 				width: 600px;
 			}
