--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,5 @@
 $fadedWhite: #e7e7e7;
 $white: #fff;
-$orange: #fcbc30;
-$fadedOrange: #f6efe4;
 $black: black;
 $blue:#00a6c7;
+$red:rgba(220, 6, 6, 0.957)
